# ShellyENEA

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
ShellyENEA/: Shelly.py  ShellyLab.py  __init__.py  readshellydata.py
ShellyENEA/Shelly/: Shelly.py
ShellyENEA/ShellyLab/: ShellyLab.py
ShellyENEA/lib/: shelly_data_config.yaml
src/: ShellyLab.py
src/ShellyENEA/: Shelly.py  ShellyLab.py
src/ShellyENEA/data/: shelly_data_config.yaml
src/data/: shelly_data_config.yaml
test/: test_shelly.py  test_shellylab.py
test/DATA/: Shellys.yml  test_ESP32_Bologna.yml
