[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ShellyENEA"
version = "0.1.0"
description = "Python project to read data and manage sets of Shelly devices"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Francesco Baldi", email = "your.email@example.com" }
]
license = { text = "GPL-3.0" }
keywords = ["Shelly", "IoT", "Home Automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPL-3.0)",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests", "pyyaml", "datetime", "pandas", "schedule"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2",
]

[tool.setuptools]
packages = ["ShellyENEA"]
include-package-data = true
